--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -32,7 +32,7 @@
 
         <!-- LOGO -->
         <div class="info-parent">
-            <img src="../../../assets/Group 16.png" alt="" class="footer-logo">
+            <img src="../../../assets/MyLogo.png3" alt="" class="footer-logo">
         </div>
 
     </div>
