--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ $light-blue: #A6B1E1;
 $lavender: #DCD6F7;
 $marian: #424874;
 $border: #CDD1C4;
-$jet: #30323D;
+$jet: #ffffff;
 $text: #141414;
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
