--- a/src/app/components/skills-cards/skills-cards.component.scss
+++ b/src/app/components/skills-cards/skills-cards.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
 
-    color: white;
+    // color: white;
 
     margin-bottom: 20px;
     p{
@@ -11,18 +11,17 @@
     }
 }
 .skill-grid{
-    border-radius: 12px;
+    // border-radius: 12px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 12px;
 
-    background: #00000048;
     padding: 20px;
-
+    
     .skill-parent{
+        // background: #00000021;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         text-align: center;
         width: 100px;
@@ -30,7 +29,7 @@
 
 
     .name{
-        color: white;
+        // color: white;
     }
     .skill-img{
         height: 32px;
