hosted imgs, file size still too large...

--- a/src/app/components/skills-cards/skills-cards.component.scss
+++ b/src/app/components/skills-cards/skills-cards.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
 
-    // color: white;
+    color: black;
 
     margin-bottom: 20px;
     p{
