--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer [ngClass]="{'nightmode': darkLightService.darkMode}">
     <div class="container info-section poppins">
         <!-- MY INFO -->
         <div class="info-parent">
