--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="hero-parent roboto">
+<div [ngClass]="{'nightmode':darkLightService.darkMode}" class="hero-parent roboto">
     <p class="code">
         <span class="bluecode">aspiring_junior_dev</span>
         = <span class="pinkcode">[</span>
