--- a/src/app/components/skills-cards/skills-cards.component.html
+++ b/src/app/components/skills-cards/skills-cards.component.html
@@ -1,5 +1,5 @@
 
-<div class="skill-section">
+<div class="skill-section" [ngClass]="{'nightmode': darkLightService.darkMode}">
     <!-- DEV SKILLS -->
     <div>
         <h1 class="title">DEV <br> SKILLS</h1>
