--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,9 +1,44 @@
 
-@import '../../../styles.scss';
+@import '../../../scss/universal';
+
 
 .hero-parent{
+  background: white;
+  border: 1px solid grey;
+    padding: 12px;
+
+    margin-bottom: 20px;
+    .code{
+        margin: 0;
+        line-height: 150%;
+        color: black;
+        span.bluecode{
+          color: #0d6ebd;
+        }
+        span.redcode{
+          color: #7b4f3a;
+        }
+        span.yellowcode{
+          color: #e49203;
+        }
+        span.pinkcode{
+          color: #f00fb0;
+        }
+
+    }
+    .cursor{
+      color: black;
+      background: #000;
+      animation: pulse 1s infinite;
+      display: table;
+    }
+}
+
+
+
+.hero-parent.nightmode{
     background: #000;
-    border: 1px solid $border;
+    border: 1px solid white;
 
     padding: 12px;
 
