--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,10 @@
-<nav>
+<nav [ngClass]="{'nightmode': darkLightService.darkMode }">
     <div class="container justify-content-between d-flex poppins">
         <a routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="" class="nav-route">Home</a>
         <a routerLinkActive="active" routerLink="project/StocktonMayorWebsite" class="nav-route">Stockton Mayor Website</a>
         <a routerLinkActive="active" routerLink="project/CORSACRAFT" class="nav-route russo-one">CORSACRAFT</a>
         <a routerLinkActive="active" routerLink="project/SuppWorld" class="nav-route">SuppWorld!</a>
         <a routerLinkActive="active" routerLink="project/NgPasswordGenerator" class="nav-route">Angular Password Generator</a>
+        <app-night-day-switch></app-night-day-switch>
     </div>
 </nav>
