--- a/src/app/components/project-section/project-section.component.scss
+++ b/src/app/components/project-section/project-section.component.scss
@@ -1,3 +1,4 @@
+@import '../../../scss/universal';
 
 
 .project-parent{
@@ -10,7 +11,7 @@
         border: 1px solid black;
     }
     a{
-        color: black;
+        color: $text;
     }
     .description{
         max-height: 300px;
@@ -26,6 +27,18 @@
 }
 .title{
     h1{&:hover{
-        color: red;
+        color: $saffron;
+        text-decoration: underline $saffron;
     }}
+}
+
+
+
+.nightmode{
+    // background: #000;
+    // color: white;
+    a{
+        color: white;
+
+    }
 }
