--- a/src/app/components/skills-cards/skills-cards.component.scss
+++ b/src/app/components/skills-cards/skills-cards.component.scss
@@ -1,3 +1,4 @@
+@import '../../../scss/universal';
 
 .skill-section{
     display: flex;
@@ -16,20 +17,30 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 12px;
 
-    padding: 20px;
+    // padding: 20px;
     
     .skill-parent{
-        // background: #00000021;
+        background: $platinum;
+
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
         width: 100px;
+        height: 100px;
+        justify-content: center;
+        padding: 4px;
+        border-radius: 50%;
+        border: 1px solid black;
+
+        
+        
     }
 
 
     .name{
         // color: white;
+        font-size: 12px;
     }
     .skill-img{
         height: 32px;
