--- a/src/app/components/project-section/project-section.component.html
+++ b/src/app/components/project-section/project-section.component.html
@@ -3,7 +3,7 @@
 <div [ngClass]="{'reverse':i%2!==0, 'nightmode': darkLightService.darkMode}" class="project-parent poppins row" *ngFor="let item of projects.project; let i=index">
     <div class="col-6">
         <a routerLink="project/{{item.reference}}" class="title">
-            <h1>{{item.name}}</h1>
+            <h1 class="proj-title">{{item.name}}</h1>
         </a>
         <div [innerHTML]="item.description" class="description"></div>
     </div>
