--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,8 +14,8 @@
         <div class="info-parent">
             <h3 class="title">My links</h3>
             <p class="my-info text-center">
-                <a href=""><img src="../../../assets/linkedin.svg" alt="" class="footer-link"></a> <br>
-                <a href=""><img src="../../../assets/github.svg" alt="" class="footer-link"></a> <br>
+                <a target="_blank" href="https://linkedin.com/in/nharrisonw/"><img src="../../../assets/linkedin.svg" alt="" class="footer-link"></a> <br>
+                <a target="_blank" href="https://github.com/nHarrisonW"><img src="../../../assets/github.svg" alt="" class="footer-link"></a> <br>
                 <a href=""><img src="../../../assets/resume-7.svg" alt="" class="footer-link"></a> <br>
             </p>
         </div>
@@ -24,7 +24,7 @@
         <div class="info-parent">
             <h3 class="title">Letters of Recomendation</h3>
             <p class="my-info">
-                <a class="letter-link" href="{{item.src}}" *ngFor="let item of letterService.letters">{{item.name}}</a>
+                <a class="letter-link" routerLink="{{item.route}}/letter" *ngFor="let item of letterService.letters">{{item.name}}</a>
             </p>
         </div>
 
