--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,10 +13,10 @@
         <!-- MY LINKS -->
         <div class="info-parent">
             <h3 class="title">My links</h3>
-            <p class="my-info text-center">
+            <p class="my-info svgs">
                 <a target="_blank" href="https://linkedin.com/in/nharrisonw/"><img src="../../../assets/linkedin.svg" alt="" class="footer-link"></a> <br>
                 <a target="_blank" href="https://github.com/nHarrisonW"><img src="../../../assets/github.svg" alt="" class="footer-link"></a> <br>
-                <a href=""><img src="../../../assets/resume-7.svg" alt="" class="footer-link"></a> <br>
+                <a target="_blank" href="assets/HarrisonWResumeRTX.pdf"><img src="../../../assets/resume-7.svg" alt="" class="footer-link"></a> <br>
             </p>
         </div>
 
