--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -39,3 +39,15 @@ nav{
         color: white;
     }
 }
+
+
+// Responsive
+@media (max-width: 1180px){
+    .nav-route{
+        font-size: 12px;
+    }
+}
+
+@media (max-width:758px){
+    
+}
