--- a/src/app/views/about-page/about-page.component.html
+++ b/src/app/views/about-page/about-page.component.html
@@ -1,5 +1,13 @@
 <div class="about-parent" [ngClass]="{'nightmode': darkLightService.darkMode}">
+    <div class="about-hero">
+
     <img src="https://i.imgur.com/em9QyBb.jpg" alt="" class="headshot">
-    <div [innerHTML]=""></div>
+    <h3 class="bio">
+        
+        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, quibusdam magni quidem dolore quam repudiandae placeat voluptate porro similique vel et tenetur eos aliquid culpa repellendus veritatis dolorem sed inventore officiis eum incidunt, veniam commodi. Saepe odio dignissimos suscipit modi."
+    </h3>
+</div>
+
+    <div [innerHTML]="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi deleniti placeat repudiandae, voluptates ipsum, dolorum laboriosam, labore sapiente error a praesentium eveniet ducimus ipsa hic. Praesentium dolorum dicta quasi in perferendis iste fugit temporibus id amet ea laborum, totam nostrum ab autem assumenda illum veritatis illo deleniti qui quidem ipsum odio. Iure quibusdam nam, cumque blanditiis assumenda sint tempora, excepturi accusamus ut iusto asperiores corporis quis nostrum vitae commodi illo? Perferendis accusantium, sunt voluptatum error labore quod esse quia fugiat?</div>
     <div [innerHTML]=""></div>
 </div>
