--- a/src/app/views/about-page/about-page.component.scss
+++ b/src/app/views/about-page/about-page.component.scss
@@ -2,7 +2,12 @@
 
 
 .about-parent{
-    display: flex;
+
+    .about-hero{
+        display: flex;
+        align-items: center;
+        gap: 24px;
+    }
 
     .headshot{
         height: 340px;
