--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,6 +7,9 @@ footer{
     border-top: 1px solid #000;
 
 }
+.svgs{
+    text-align: center;
+}
 .info-section{
     display: flex;
     justify-content: space-between;
@@ -48,4 +51,13 @@ footer{
 
 .letter-link{
 
+}
+
+@media (max-width:758px) {
+    .info-section{
+        flex-direction: column;
+    }
+    .svgs{
+        text-align: start;
+    }
 }
