--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -3,10 +3,7 @@
 <div [ngClass]="{'nightmode':darkLightService.darkMode}" class="hero-parent roboto">
     <p class="code">
         <span class="bluecode">aspiring_junior_dev</span>
-        = <span class="pinkcode">[</span>
-    </p>
-    <p class="code ps-2">
-        <span class="bluecode">&#123;</span>
+        = <span class="pinkcode">&#123;</span>
     </p>
     <p class="code ps-3">
         <span class="bluecode">name: </span>
@@ -49,12 +46,8 @@
         <span class="yellowcode">]</span>
     </p>
 
-    <p class="code ps-2">
-        <span class="bluecode">&#125;</span>
-    </p>
-
     <p class="code">
-        <span class="pinkcode">]</span>
+        <span class="pinkcode">&#125;</span>
     </p>
 
     <p class="cursor">$</p>
