--- a/src/app/views/recomendation-page/recomendation-page.component.html
+++ b/src/app/views/recomendation-page/recomendation-page.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="rec-parent">
-    <div class="d-flex">
+    <div class="d-flex flex-column">
         <a target="_blank" href="{{letter.reference}}">
             <img src="{{letter.src}}" alt="" class="letter">
         </a>
