--- a/src/app/views/about-page/about-page.component.html
+++ b/src/app/views/about-page/about-page.component.html
@@ -1,13 +1,30 @@
-<div class="about-parent" [ngClass]="{'nightmode': darkLightService.darkMode}">
-    <div class="about-hero">
-
-    <img src="https://i.imgur.com/em9QyBb.jpg" alt="" class="headshot">
-    <h3 class="bio">
-        
-        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, quibusdam magni quidem dolore quam repudiandae placeat voluptate porro similique vel et tenetur eos aliquid culpa repellendus veritatis dolorem sed inventore officiis eum incidunt, veniam commodi. Saepe odio dignissimos suscipit modi."
-    </h3>
-</div>
-
-    <div [innerHTML]="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi deleniti placeat repudiandae, voluptates ipsum, dolorum laboriosam, labore sapiente error a praesentium eveniet ducimus ipsa hic. Praesentium dolorum dicta quasi in perferendis iste fugit temporibus id amet ea laborum, totam nostrum ab autem assumenda illum veritatis illo deleniti qui quidem ipsum odio. Iure quibusdam nam, cumque blanditiis assumenda sint tempora, excepturi accusamus ut iusto asperiores corporis quis nostrum vitae commodi illo? Perferendis accusantium, sunt voluptatum error labore quod esse quia fugiat?</div>
-    <div [innerHTML]=""></div>
+<div class="about-parent" [ngClass]="{ nightmode: darkLightService.darkMode }">
+  <div class="about-hero col-4">
+    <img src="https://i.imgur.com/em9QyBb.jpg" alt="" class="headshot" />
+    <div class="bio">
+        <p class="hello-title">
+            Hello, I'm <br>
+            Harrison
+        </p>
+        <p class="hello-p">
+            I am currently an aspiring software developer working for Codestack. My team is currently working on the Stockton Mayor's personal website!
+        </p>
+    </div>
+  </div>
+  <div>
+    <h1>About Me</h1>
+  <p class="about-p">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, exercitationem necessitatibus culpa quia cumque perspiciatis tempore dolorem! Blanditiis, nihil nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi accusamus quidem earum molestiae, quae magni?
+  </p>
+  <p class="about-p">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dicta alias omnis illum minus porro eos, placeat, distinctio atque tempora veritatis ducimus commodi veniam perferendis sint eius corrupti eveniet amet, exercitationem voluptatibus modi dolores ipsam. Voluptates nobis, animi ullam, exercitationem earum illo doloribus quo sunt sequi neque omnis eius impedit ut harum nisi molestiae, est a!
+  </p>
+  <p class="about-p">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam dolores nisi suscipit, officia amet expedita quidem excepturi iste reprehenderit sunt tempore, laboriosam vel! Dignissimos, fuga. Ipsam esse, qui dolorum facere sunt optio, voluptas culpa quod officiis consequuntur veritatis unde, quisquam quos vitae.
+  </p>
+  <p class="about-p">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae harum laborum voluptatibus recusandae dolorum doloribus eveniet nulla vitae blanditiis quidem illo consequuntur corrupti reiciendis, illum ad quos inventore sit eaque atque, ex ducimus maxime commodi architecto! Fugiat alias quisquam provident consectetur aliquam eos consequuntur, esse dolorum nulla similique tempora quam ea perspiciatis accusantium expedita sint eligendi.
+  </p>
+  <button routerLink="" class="contact">Contact Me!</button>
+  </div>
 </div>
