--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,7 +2,7 @@
 
 <div [ngClass]="{'nightmode':darkLightService.darkMode}" class="hero-parent roboto">
     <p class="code">
-        <span class="bluecode">aspiring_junior_dev</span>
+        <span class="bluecode">junior_developer</span>
         = <span class="pinkcode">&#123;</span>
     </p>
     <p class="code ps-3">
