--- a/src/app/views/about-page/about-page.component.html
+++ b/src/app/views/about-page/about-page.component.html
@@ -7,24 +7,21 @@
             Harrison
         </p>
         <p class="hello-p">
-            I am currently an aspiring software developer working for Codestack. My team is currently working on the Stockton Mayor's personal website!
+            I am currently an intern junior software developer working for Codestack. My team is currently working on the Stockton Mayor's personal website!
         </p>
     </div>
   </div>
   <div>
     <h1>About Me</h1>
   <p class="about-p">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, exercitationem necessitatibus culpa quia cumque perspiciatis tempore dolorem! Blanditiis, nihil nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi accusamus quidem earum molestiae, quae magni?
+    Before embarking on my coding journey, I had the privilege of working at Costco Wholesale's distribution center, where I served as a forklift operator, a service clerk, and notably, as a safety representative for department 61. In this pivotal role, I was entrusted with the vital task of proactively identifying and rectifying safety concerns within the warehouse, conducting thorough inspections, and engaging with fellow employees to ensure a secure work environment. Furthermore, I represented my department during safety meetings, effectively communicating identified issues and collaborating with colleagues and management to implement actionable solutions. This experience honed my skills in problem-solving and cross-functional collaboration, which continue to benefit me in my current coding endeavors.
   </p>
   <p class="about-p">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dicta alias omnis illum minus porro eos, placeat, distinctio atque tempora veritatis ducimus commodi veniam perferendis sint eius corrupti eveniet amet, exercitationem voluptatibus modi dolores ipsam. Voluptates nobis, animi ullam, exercitationem earum illo doloribus quo sunt sequi neque omnis eius impedit ut harum nisi molestiae, est a!
+    Now, fueled by a newfound passion, my mission has evolved towards crafting unique software solutions. Building on the foundation of my experience at Costco, I am dedicated to leveraging my problem-solving aptitude and collaborative skills to design and develop innovative software applications that address real-world challenges. Just as I once championed safety and efficiency within the warehouse, I am now committed to harnessing technology's potential to streamline processes, enhance user experiences, and make a positive impact. This transition from a safety advocate to a software creator showcases my adaptability and continuous pursuit of growth, driving me to contribute meaningfully to the ever-evolving landscape of technology.
   </p>
-  <p class="about-p">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam dolores nisi suscipit, officia amet expedita quidem excepturi iste reprehenderit sunt tempore, laboriosam vel! Dignissimos, fuga. Ipsam esse, qui dolorum facere sunt optio, voluptas culpa quod officiis consequuntur veritatis unde, quisquam quos vitae.
-  </p>
-  <p class="about-p">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae harum laborum voluptatibus recusandae dolorum doloribus eveniet nulla vitae blanditiis quidem illo consequuntur corrupti reiciendis, illum ad quos inventore sit eaque atque, ex ducimus maxime commodi architecto! Fugiat alias quisquam provident consectetur aliquam eos consequuntur, esse dolorum nulla similique tempora quam ea perspiciatis accusantium expedita sint eligendi.
-  </p>
-  <button routerLink="" class="contact">Contact Me!</button>
+  <!-- <p class="about-p">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id iste nostrum est quod, animi ipsum, voluptate esse tenetur numquam eveniet velit alias? Excepturi dolore quod odio esse iste dolores tempore sequi sapiente quibusdam, delectus, inventore mollitia iusto dolor quidem accusamus.
+  </p> -->
+  <a href="mailto:wilkinsnigel2000@gmail.com" class="contact">Send an Email!</a>
   </div>
 </div>
